--- a/SoOSiM-ui.cabal
+++ b/SoOSiM-ui.cabal
@@ -61,8 +61,11 @@ Executable SoOSiM-ui
                , gtk
                , glade
                , gloss-gtk
+               , SoOSiM
 
                , base >= 4.0 && < 5.0
+               , ghc  
+               , containers
                , mtl
   
   -- Modules not exported by this package.
@@ -89,6 +92,7 @@ Executable SoOSiM-ui
                     Graphics.Types
                     Graphics.Diagram2PlainDiagram
                     Graphics.MultiCoreStatus2Diagram
+                    Graphics.SimState2MultiCoreStatus
                     Paths
                     CombinedEnvironment
                     Paths.CustomPaths
