Attributes copyright to the SoOS consortium

--- a/SoOSiM-ui.cabal
+++ b/SoOSiM-ui.cabal
@@ -29,7 +29,7 @@ Author:              Ivan Perez
 Maintainer:          ivan.perez@keera.es
 
 -- A copyright notice.
--- Copyright:           
+Copyright:           S(o)OS Consortium
 
 Category:            Debug
 
