--- a/SoOSiM-ui.cabal
+++ b/SoOSiM-ui.cabal
@@ -42,6 +42,7 @@ Build-type:          Custom
 Data-files: data/Interface.glade
             data/*.png
             data/images/icons/*.png
+            data/config
 
 -- Constraint on the version of Cabal needed to build this package.
 Cabal-version:       >=1.2
