--- a/SoOSiM-ui.cabal
+++ b/SoOSiM-ui.cabal
@@ -69,6 +69,7 @@ Executable SoOSiM-ui
                , base >= 4.0 && < 5.0
                , ghc  
                , containers
+               , IfElse
                , mtl
                , stm
   
