Makes the event boxes part of the gloss widget. Removes fields from the view.

--- a/SoOSiM-ui.cabal
+++ b/SoOSiM-ui.cabal
@@ -60,6 +60,7 @@ Executable SoOSiM-ui
   
   -- Packages needed in order to build this package.
   Build-depends: hails
+               , glib
                , gtk
                , glade
                , gloss-gtk
