Moves the simulation status to the model. Removes all direct traces of gloss from the view.

--- a/SoOSiM-ui.cabal
+++ b/SoOSiM-ui.cabal
@@ -106,6 +106,9 @@ Executable SoOSiM-ui
                     Graphics.Gloss.AdvancedShapes.Boxes
                     Graphics.Gloss.AdvancedShapes.Shadows
                     Graphics.Zoom
+                    Graphics.UI.Gtk.Display.GlossIO
+                    Graphics.UI.Gtk.Display.GlossIOThumbnail
+                    Graphics.UI.Gtk.Display.SoOSiMState
                     Model.Model
                     Model.SystemStatus
                     Model.ProtectedModel
@@ -130,10 +133,7 @@ Executable SoOSiM-ui
                     SoOSiM.Components.Scheduler.Types
                     SoOSiM.Samples.Initializer
                     View
-                    View.Animation
                     View.InitAnimationArea
-                    View.InitMainPictureArea
-                    View.InitThumbnail
                     View.InitIconsInfoArea
                     View.Objects
                     View.Tooltips
