--- a/SoOSiM-ui.cabal
+++ b/SoOSiM-ui.cabal
@@ -62,10 +62,6 @@ Executable SoOSiM-ui
   Build-depends: glib
                , gtk
                , glade
-               , gloss-gtk
-               , keera-callbacks
-               , gtk-helpers     >= 0.0.4
-               , SoOSiM          == 0.1
 
                , base >= 4.0 && < 5.0
                , ghc  
@@ -73,13 +69,19 @@ Executable SoOSiM-ui
                , IfElse
                , mtl
                , stm
-               -- , hails
-               , hails-mvc-model-protectedmodel
-               , gtk-helpers
-               , hails-mvc-view-gtk
+               
+               -- Keera packages
+               , keera-callbacks
+               , gtk-helpers     >= 0.0.4
                , hails-mvc-environment-gtk
+               , hails-mvc-model-protectedmodel
+               , hails-mvc-view-gtk
                , hails-reactive-gtk
                , hails-reactivevalues
+
+               -- SoOS packages
+               , gloss-gtk
+               , SoOSiM          == 0.1
   
   -- Modules not exported by this package.
   Other-modules:    CombinedEnvironment
